libs/@local/codegen/tests/codegen/snapshots/codegen__EnumAdjacent::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
type EnumAdjacent = {
	type: "Unit"
} | {
	type: "EmptyUnnamed"
	content: []
} | {
	type: "SingleUnnamed"
	content: number
} | {
	type: "DoubleUnnamed"
	content: [boolean, string]
} | {
	type: "EmptyNamed"
	content: {}
} | {
	type: "SingleNamed"
	content: {
		value: number
	}
} | {
	type: "MultiNamed"
	content: {
		value_1: number
		value_2: string
	}
};
