libs/@local/codegen/tests/codegen/snapshots/codegen__EnumInternal::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
type EnumInternal = {
	type: "Unit"
} | {
	type: "EmptyNamed"
} | {
	type: "SingleNamed"
	value: number
} | {
	type: "MultiNamed"
	value_1: number
	value_2: string
};
