libs/@local/codegen/tests/codegen/snapshots/codegen__EnumUntagged::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
type EnumUntagged = null | [] | number | [boolean, string] | Record<string, never> | {
	value: number
} | {
	value_1: number
	value_2: string
} | {
	name: string
} & StructSimple;
