libs/@local/codegen/tests/codegen/snapshots/codegen__ExternallyTaggedEnum::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
type ExternallyTaggedEnum = "Unit" | {
	EmptyUnnamed: []
} | {
	SingleUnnamed: number
} | {
	DoubleUnnamed: [boolean, string]
} | {
	EmptyNamed: {}
} | {
	SingleNamed: {
		value: number
	}
} | {
	MultiNamed: {
		value_1: number
		value_2: string
	}
};
