libs/@local/codegen/tests/codegen/snapshots/codegen__ListCollections::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
export interface ListCollections {
	string_list: string[];
	number_list: number[];
	nested_list: StructSimple[];
}
