libs/@local/codegen/tests/codegen/snapshots/codegen__ListNested::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
export interface ListNested {
	list_of_lists: number[][];
	matrix: number[][][];
	nested_sets: number[][];
	mixed_nesting: number[][];
}
