libs/@local/codegen/tests/codegen/snapshots/codegen__ListOptionals::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
type ListOptionals = {
	optional_strings: (string | undefined)[]
	optional_integers: (number | undefined)[]
	optional_arrays: (number[] | undefined)[]
	optional_sets: (string[] | undefined)[]
};
