libs/@local/codegen/tests/codegen/snapshots/codegen__ListStructs::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
export interface ListStructs {
	vec_items: StructSimple[];
	array_items: StructSimple[];
	set_items: StructSimple[];
	linked_items: StructSimple[];
}
