libs/@local/codegen/tests/codegen/snapshots/codegen__Machine::Typescript.snap
---
source: libs/@local/codegen/tests/codegen/main.rs
expression: generated
---
export interface Machine {
	id: MachineId;
	identifier: string;
	roles: RoleId[];
}
